# binary-brute-force-team

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  LICENSE  README.md  alembic.ini  celery_utils.py  docker-compose.yaml  entrypoint.sh  pyproject.toml
experiments/: data_collator.ipynb  image_descriptor.ipynb  img_to_pdf.ipynb
experiments/data/: stem_sample.parquet
project/: __init__.py  config.py
project/app/agents/: __init__.py  educational_workflow.py  prompt_loader.py  simple_agent.py  utils.py
project/app/agents/nodes/: __init__.py  code_fixer.py  dynamic_generator.py  improvement_agent.py  intention_detector.py  media_generator.py  static_generator.py
project/app/agents/tools/: __init__.py  base.py
project/app/celery/: setup.py  tasks.py
project/app/database/: session.py
project/app/models/: models.py
project/app/observability/: __init__.py
project/app/prompts/: code_fixer.md  dynamic_generator.md  improvement_agent.md  intention_detector.md  static_generator.md
project/app/routers/: agents.py  chat.py  educational.py  frontend.py
project/app/schemas/: agent.py  chat.py  educational.py
project/app/services/: __init__.py  chat_service.py  pdf_service.py  redis_client.py
project/app/static/css/: chat.css  styles.css
project/app/templates/: base.html  chat.html  index.html
project/app/templates/components/: agent_status.html  chat_content.html  chat_input.html  chat_messages.html  chat_sidebar.html  image_carousel.html  initial_view.html
scripts/: validate_educational_workflow.py
scripts/input/: sample.md
(+1 files in other folders)
