[project]
name = "binary-brute-force-team"
version = "0.1.0"
description = "Assistant that create interactive images for STEM use cases"
requires-python = ">=3.12.9,<3.13"
dependencies = [
    # Core FastAPI
    "fastapi~=0.115.12",
    "uvicorn~=0.34.0",
    "gunicorn~=23.0.0",
    # Database
    "sqlalchemy~=2.0.40",
    "alembic~=1.15.2",
    "pymysql~=1.1.1",
    "mysqlclient~=2.2.7",
    "mysql-connector-python~=9.2.0",
    # Queue
    "celery~=5.4.0",
    "redis~=5.2.1",
    # LangChain/LangGraph
    "langchain>=1.2.3",
    "langgraph>=1.0.6",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.1.0",
    # HTMX & Templating
    "jinja2~=3.1.0",
    "python-multipart~=0.0.6",
    # PDF Processing
    "pypdf2~=3.0.0",
    # Additional utilities
    "pydantic~=2.0",
    "python-dotenv~=1.0.0",
    "ipykernel>=7.1.0",
    "pandas>=2.3.3",
    "opencv-python>=4.12.0.88",
    "matplotlib>=3.10.8",
    "weasyprint==52.1",
    "pymongo>=4.16.0",
    "manim>=0.19.1",
    "mistralai>=1.5.2",
]

[tool.uv]
dev-dependencies = [
    "pre-commit~=4.2.0",
    "ruff~=0.11.2",
    "pytest~=8.3.5",
    "pytest-cov~=6.0.0",
    "pytest-asyncio~=0.26.0",
    "httpx~=0.27.0",
]
